Optimize data tracking